# nuget2nix

./: .envrc  .gitignore  Cargo.toml  flake-module.nix  flake.nix
nix/: build-dotnet-module.nix  devshell.nix  nuget2nix.nix
src/: main.rs  nix_hash.rs  nuget.rs
