[package]
name = "nuget2nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
glob = "0.3.0"
nix-base32 = "0.1.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
quick_cache = "0.4.0"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
sha2 = "0.10.8"
url = { version = "2.2.2", features = ["serde"] }
